Fixed issue where vertical scrollbar would not show

--- a/style.sass
+++ b/style.sass
@@ -37,7 +37,7 @@ html, body
 
 .guide
     width: 100%
-    //height: 100%
+    max-height: 100%
     overflow-x: scroll
     position: relative
 
